--- a/html1.html
+++ b/html1.html
@@ -72,7 +72,7 @@
            <li>Angular</li>
        </ul>
    </ul>
-   <a href="html_Assessment.html">Go Back</a>
+   <a href="index.html">Go Back</a>
 
 </body>
 </html>
